src/objects/Financial_Journal_Line__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Reconciliation_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Reconciliation Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement</label>
        <referenceTo>Bank_Statement__c</referenceTo>
        <relationshipLabel>Financial Journal Lines</relationshipLabel>
        <relationshipName>Financial_Journal_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chit_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chit Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Journal Lines</relationshipLabel>
        <relationshipName>Financial_Journal_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <formula>IF((Financial_Account__r.Debit_Credit__c==&quot;Credit&quot; &amp;&amp; Amount__c&gt;0)||(Financial_Account__r.Debit_Credit__c==&quot;Debit&quot; &amp;&amp; Amount__c&lt;0),ABS(Amount__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <formula>IF((Financial_Account__r.Debit_Credit__c==&quot;Debit&quot; &amp;&amp; Amount__c&gt;0)||(Financial_Account__r.Debit_Credit__c==&quot;Credit&quot; &amp;&amp; Amount__c&lt;0),ABS(Amount__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Financial Journal Lines</relationshipLabel>
        <relationshipName>Financial_Journal_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipName>Financial_Journals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Summary</label>
        <referenceTo>Financial_Summary__c</referenceTo>
        <relationshipLabel>Financial Journal Lines</relationshipLabel>
        <relationshipName>Financial_Journal_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Income Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Index_Num__c</fullName>
        <formula>Value(Insert_Index__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insert Index Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insert_Index__c</fullName>
        <label>Insert Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Journal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Journal_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Journal Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RolledOver_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RolledOver Journal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction2_id__c</fullName>
        <description>Transaction2 Id associated with the Taxes and Service Charge.</description>
        <label>Transaction2_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year Closing</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Journal Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Financial_Journal_Entry__c</columns>
        <columns>Income_Journal__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FINJRNL-{000000}</displayFormat>
        <label>Financial Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Journal Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>